# Security-Monitor

./: CHANGELOG.md  CONTRIBUTING.md  DELIVERY_NOTES.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml  requirements.txt  run_tests.py  security_monitor.db  setup.py  start.sh  status_check.py  stop.sh
config/: security_monitor.json
security_monitor/: __init__.py  main.py
security_monitor/agent/: __init__.py  file_monitor.py  main.py  system_monitor.py
security_monitor/dashboard/: __init__.py  app.py
security_monitor/database/: __init__.py  database.py  models.py
security_monitor/detection/: __init__.py  rules.py
security_monitor/reporting/: __init__.py  email_service.py  pdf_generator.py
security_monitor/utils/: __init__.py  config.py
tests/: __init__.py  test_basic.py
