[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-monitor"
version = "1.0.0"
description = "A comprehensive security monitoring framework"
authors = [{name = "Security Monitor", email = "admin@securitymonitor.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "psutil>=5.9.6",
    "watchdog>=3.0.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "reportlab>=4.0.7",
    "schedule>=1.2.1",
    "cryptography>=41.0.7",
    "requests>=2.31.0",
    "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/security-monitor/security-monitor"
Repository = "https://github.com/security-monitor/security-monitor.git"
Issues = "https://github.com/security-monitor/security-monitor/issues"

[project.scripts]
security-monitor = "security_monitor.main:main"
security-agent = "security_monitor.agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["security_monitor*"]
exclude = ["tests*"]